[gd_scene load_steps=14 format=2]

[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Cabeza/hood_gray.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Imagenes/Sprites/Cuerpo/halfling_m.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Piernas/leg_armor04.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Imagenes/Iconos/icon_50.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Imagenes/Iconos/icon_51.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Pecho/chainmail.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Pies/middle_brown_3.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Fonts/Interfaz.tres" type="DynamicFont" id=8]
[ext_resource path="res://Recursos/Imagenes/Iconos/icon_94.png" type="Texture" id=9]
[ext_resource path="res://Pantallas/Interfaces/CreadorPersonajes.gd" type="Script" id=10]
[ext_resource path="res://Componentes/BtnShowHide.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.47451, 0.372549, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="CreadorPersonajes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -43.0
margin_right = 72.0
margin_bottom = 45.0
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="Panel"]
margin_left = 48.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Base" type="Sprite" parent="Panel/Panel"]
position = Vector2( 16, 24 )
texture = ExtResource( 2 )

[node name="Piernas" type="Sprite" parent="Panel/Panel"]
position = Vector2( 16, 24 )
texture = ExtResource( 3 )

[node name="Pies" type="Sprite" parent="Panel/Panel"]
position = Vector2( 16, 24 )
texture = ExtResource( 7 )

[node name="Pecho" type="Sprite" parent="Panel/Panel"]
position = Vector2( 16, 24 )
texture = ExtResource( 6 )

[node name="Cabeza" type="Sprite" parent="Panel/Panel"]
position = Vector2( 16, 24 )
texture = ExtResource( 1 )

[node name="ConCabeza" type="HBoxContainer" parent="Panel"]
margin_left = 88.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 16.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="BtnShowHide" parent="Panel/ConCabeza" instance=ExtResource( 11 )]
nodo_afectado = NodePath("../../Panel/Cabeza")

[node name="BtnCabezaI" type="TextureButton" parent="Panel/ConCabeza"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 5 )
expand = true

[node name="LblCabeza" type="Label" parent="Panel/ConCabeza"]
margin_left = 16.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 8 )
text = "Cabeza"
align = 1
valign = 1

[node name="BtnCabezaD" type="TextureButton" parent="Panel/ConCabeza"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 4 )
expand = true

[node name="ConPecho" type="HBoxContainer" parent="Panel"]
margin_left = 88.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 32.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="BtnShowHide" parent="Panel/ConPecho" instance=ExtResource( 11 )]
nodo_afectado = NodePath("../../Panel/Pecho")

[node name="BtnPechoI" type="TextureButton" parent="Panel/ConPecho"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 5 )
expand = true

[node name="LblPecho" type="Label" parent="Panel/ConPecho"]
margin_left = 16.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 8 )
text = "Pecho"
align = 1
valign = 1

[node name="BtnPechoD" type="TextureButton" parent="Panel/ConPecho"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 4 )
expand = true

[node name="ConPiernas" type="HBoxContainer" parent="Panel"]
margin_left = 88.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 48.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="BtnShowHide" parent="Panel/ConPiernas" instance=ExtResource( 11 )]
nodo_afectado = NodePath("../../Panel/Piernas")

[node name="BtnPiernasI" type="TextureButton" parent="Panel/ConPiernas"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 5 )
expand = true

[node name="LblPiernas" type="Label" parent="Panel/ConPiernas"]
margin_left = 16.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 8 )
text = "Piernas"
align = 1
valign = 1

[node name="BtnPiernasD" type="TextureButton" parent="Panel/ConPiernas"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 4 )
expand = true

[node name="ConPies" type="HBoxContainer" parent="Panel"]
margin_left = 88.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 64.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="BtnShowHide" parent="Panel/ConPies" instance=ExtResource( 11 )]
nodo_afectado = NodePath("../../Panel/Pies")

[node name="BtnPiesI" type="TextureButton" parent="Panel/ConPies"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 5 )
expand = true

[node name="LblPies" type="Label" parent="Panel/ConPies"]
margin_left = 16.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 8 )
text = "Pies"
align = 1
valign = 1

[node name="BtnPiesD" type="TextureButton" parent="Panel/ConPies"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 4 )
expand = true

[node name="ConCuerpo" type="HBoxContainer" parent="Panel"]
margin_left = 40.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 80.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="BtnCuerpoI" type="TextureButton" parent="Panel/ConCuerpo"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 5 )
expand = true

[node name="LblPiernas2" type="Label" parent="Panel/ConCuerpo"]
margin_left = 8.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 32, 8 )
custom_fonts/font = ExtResource( 8 )
text = "Cuerpo"
align = 1
valign = 1

[node name="BtnCuerpoD" type="TextureButton" parent="Panel/ConCuerpo"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 4 )
expand = true

[node name="BtnCerrar" type="TextureButton" parent="Panel"]
margin_left = 136.0
margin_right = 144.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 9 )
expand = true

[connection signal="button_up" from="Panel/ConCabeza/BtnCabezaI" to="." method="_on_BtnCabezaI_button_up"]
[connection signal="button_up" from="Panel/ConCabeza/BtnCabezaD" to="." method="_on_BtnCabezaD_button_up"]
[connection signal="button_up" from="Panel/ConPecho/BtnPechoI" to="." method="_on_BtnPechoI_button_up"]
[connection signal="button_up" from="Panel/ConPecho/BtnPechoD" to="." method="_on_BtnPechoD_button_up"]
[connection signal="button_up" from="Panel/ConPiernas/BtnPiernasI" to="." method="_on_BtnPiernasI_button_up"]
[connection signal="button_up" from="Panel/ConPiernas/BtnPiernasD" to="." method="_on_BtnPiernasD_button_up"]
[connection signal="button_up" from="Panel/ConPies/BtnPiesI" to="." method="_on_BtnPiesI_button_up"]
[connection signal="button_up" from="Panel/ConPies/BtnPiesD" to="." method="_on_BtnPiesD_button_up"]
[connection signal="button_up" from="Panel/ConCuerpo/BtnCuerpoI" to="." method="_on_BtnCuerpoI_button_up"]
[connection signal="button_up" from="Panel/ConCuerpo/BtnCuerpoD" to="." method="_on_BtnCuerpoD_button_up"]
[connection signal="button_up" from="Panel/BtnCerrar" to="." method="_on_BtnCerrar_button_up"]
